--- a/src/components/common/SeccionTexto/styles.module.css
+++ b/src/components/common/SeccionTexto/styles.module.css
@@ -1,6 +1,12 @@
+.seccion_texto_wrapper {
+  position: relative;
+  width: 100%;
+}
+
 .container_descripcion_servi {
-  height: 70%;
+  height: auto;
   width: 80%;
+  position: relative;
 }
 
 .container_titulo_mas {
@@ -28,7 +34,6 @@
   margin-top: 10px;
   width: 100%;
   border: 1px solid #219EBC;
-  transition: transform 0.7s ease;
 }
 
 .descripcion2_servi {
@@ -37,30 +42,16 @@
   color: #243A76;
   text-align: left;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .texto_container {
   overflow: hidden;
-  transition: height 1.0s ease, opacity 1.0s ease;
+  transition: height 0.3s ease-in-out;
   height: 0;
-  opacity: 0;
 }
 
-.texto_visible {
-  height: auto;
+.texto_contenido {
+  padding-top: 5px;
   opacity: 1;
-}
-
-.texto_oculto {
-  height: 0;
-  opacity: 0;
-  transition: height 0.5s ease, opacity 0.5s ease;
-}
-
-.texto_visible + .linea_servi {
-  transform: translateY(5px);
-}
-
-.texto_oculto + .linea_servi {
-  transform: translateY(0);
 }
