--- a/src/pages/test_psi/styles.module.css
+++ b/src/pages/test_psi/styles.module.css
@@ -12,8 +12,10 @@
 }
 
 .content {
+    flex: 1;
     padding: 60px;
-    width: 75%;
+    overflow-y: auto;
+    background-color: #f5f5f5;
 }
 
 .contentHeader {
