--- a/src/components/layout/Header/styles.module.css
+++ b/src/components/layout/Header/styles.module.css
@@ -232,6 +232,22 @@
   color: #ffffff;
 }
 
+.profile_photo_container {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.profile_photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 .dropdown {
   height: auto;
   width: 150px;
